# bachelor

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
docs/: ka64-ovchar-diplom.docx  ka64-ovchar-journal.doc  ka64-ovchar-main.docx  ka64-ovchar-thesis.docx  ka64-ovchar-title.docx
recommender/api/: __main__.py  app.py  middleware.py  payloads.py  schema.py
recommender/api/handlers/: __init__.py  base.py  interactions.py  item.py  user.py  user_history.py  user_recommendations.py
recommender/db/: __main__.py  schema.py
recommender/db/alembic/: env.py
recommender/db/alembic/versions/: d4c028ee7223_intitial.py  e6659ab3464d_add_cascade_deletions.py  ebf43a9c712b_create_aggregation_function.py
recommender/scripts/: cache.py  data.py
recommender/utils/: pg.py  redis.py
